# kangaroo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
OpenGL/include/: Inputmanager.h  axes.h  baseScene.h  bufferObj.h  common.h  decl.h  defsVcWin32.h  flashBuffer.h  framebuffers.h  gLApplication.h  gbuffer.h  glQuery.h  gli.h  glinter.h  gls.h  glu.h  light.h  resource.h  scene.h  stateSet.h  sys.h  text.h  texture.h  timerManager.h  util.h  vertex.h  wgl_context.h  win32_platform.h  windowManager.h  window_w32.h
OpenGL/include/base/: BaseObject.h  blockDXT.h  boundingBox.h  callback.h  color.h  colorBlock.h  dataQueue.h  debug.h  exception.h  fence.h  filter.h  half.h  image.h  log.h  messQue.h  plane.h  rgbe.h  smartPointer.h  str.h  synchron.h  thread.h  timer.h  vertex.h
OpenGL/include/camera/: camera.h  cameraBase.h  fspCamera.h
OpenGL/include/geometry/: IGeometry.h  dynamicMesh.h  geometry.h  mesh.h
OpenGL/include/glu/: glinternal.h  glu.h  wgl_context.h  win32_platform.h
OpenGL/include/io/: engineLoad.h  imgLoad.h  meshLoad.h  stream.h
OpenGL/include/math/: alg.h  const.h  helpF.h  occlusion.h  type.h
OpenGL/include/media/: ad.h  util.h
OpenGL/include/mesh/: baseMesh.h  comm.h
OpenGL/include/render/: IRenderNode.h  renderMesh.h  renderNode.h
OpenGL/include/scene/: dataQequest.h  rasterExtent.h  rasterLevel.h  rasterLoader.h  rasterSource.h  rasterTile.h  rasterUpdater.h  renderRasterLevel.h
OpenGL/include/shader/: comShader.h  shader.h
OpenGL/src/: axes.cpp  baseScene.cpp  bufferObj.cpp  common.cpp  framebuffers.cpp  freetypeText.cpp  gLApplication.cpp  gLQuery.cpp  gbuffer.cpp  gli.cpp  hdr.cpp  inputmanager.cpp  light.cpp  resource.cpp  scene.cpp  stateSet.cpp  text.cpp  texture.cpp  timerManager.cpp  vertex.cpp  wgl_buffer.cpp  wgl_context.cpp  wgl_context.h  win32_platform.cpp  window.cpp  windowManager.cpp  window_w32.cpp
OpenGL/src/Media/: ad.cpp  util.cpp
OpenGL/src/base/: blockDXT.cpp  debug.cpp  fence.cpp  filter.cpp  image.cpp  log.cpp  rgbe.c  str.cpp  synchron.cpp  thread_win.cpp  timer.cpp
OpenGL/src/camera/: camera.cpp  cameraBase.cpp  fspCamera.cpp
OpenGL/src/geometry/: commMesh.cpp  dynamicMesh.cpp  geometry.cpp  mesh.cpp
OpenGL/src/glu/: init.cpp  input.cpp  win32_init.cpp  win32_platform.cpp  window_w32.cpp
OpenGL/src/gui/: wgl_context.cpp  window.cpp
OpenGL/src/io/: assimpLoad.cpp  bmpImage.cpp  ddsImage.cpp  engineLoad.cpp  imgLoad.cpp  jpgImage.cpp  ktxImage.cpp  meshLoad.cpp  openExrImage.cpp  pngImage.cpp  stream.cpp  tgaImage.cpp
OpenGL/src/math/: alg.cpp  occlusion.cpp
OpenGL/src/mesh/: baseMesh.cpp  comm.cpp
OpenGL/src/render/: IRenderNode.cpp  renderMesh.cpp  renderNode.cpp
OpenGL/src/scene/: footPrints.cpp  footPrintsRender.cpp  rasterLevel.cpp  rasterLoader.cpp  rasterSource.cpp  rasterTile.cpp  rasterUpdater.cpp  renderRasterLevel.cpp
OpenGL/src/shader/: comShader.cpp  shader.cpp
cmake/: engine.cmake  options.cmake  resouce.cmake
examples/: CMakeLists.txt  teapotdata.h
examples/antialias/: CMakeLists.txt  antialia.cpp  antialias.cpp  antialias.h  csaa.cpp  msaa.cpp
examples/ao/: CMakeLists.txt  ssao.cpp
examples/light/: CMakeLists.txt  deferred.cpp
examples/mathematics/: CMakeLists.txt  glm_test.cpp  interpolation.cpp
examples/noise/: 1D_noise.cpp  CMakeLists.txt  Worley_noise.cpp  image_Synthesizer.cpp  noise_patterns.cpp  perlinNoise.cpp  perlineNoise.h  testPerlinNoise.cpp
examples/optimization/: CMakeLists.txt  NvmultriDrawIndirect.cpp  multriDrawIndirect.cpp
examples/terrains/: CMakeLists.txt  cloud.cpp  cloud.h  gpu_tess.cpp  skydom.cpp  skydom.h
examples/terrains/chunklod/: main.cpp
examples/terrains/focus3dterr/: brute_force.cpp  brute_force.h  geomipmapping.cpp  geomipmapping.h  main.cpp  terrain.cpp  terrain.h
examples/terrains/geoClipMap/: footPrints.cpp  footPrints.h  geoClipMapping.cpp  geoClipMapping.h  geometry_clipmappings_terrain.cpp  geometry_clipmappings_terrain.h  layer.cpp  layer.h  main.cpp  terrainRender.cpp  terrainUpdater.cpp  terrainUpdater.h
examples/terrains/geoMipMapping/: geoMipMapping.cpp  geoMipMapping.h  main.cpp
examples/terrains/roam/: Landscape.h  Patch.h  Roamsimple.cpp  Utility.cpp  Utility.h  roam_terrain.cpp
examples/tessellation/: CMakeLists.txt  pn_triangles_tess.cpp  pn_triangles_tess_geo.cpp  teapot.cpp  tess.cpp  tess_bezier_curves.cpp  tess_bezier_surface.cpp
examples/texturemap/: CMakeLists.txt  VVDoF.cpp  VVDoF.h  cubemap.cpp  gen.cpp  localScene.cpp  localScene.h  procedural_texture.cpp  skylands.cpp  skylands.h
examples/water/: CMakeLists.txt  complex.cc  fft.cc  fft.h  gertnerWave.cpp  water.cpp  water.h  wave.cpp  wave.h
media/models/: readme.txt
media/models/mokey/: monkey.mtl
media/shader/: basic.frag  basic.vert  hudQuad.glsl  multTexture.frag
media/shader/antialias/: multTexture.frag  screenQuad.frag
media/shader/ao/: basic.frag  basic.vert  ssao_lighting.fs
media/shader/common/: noise.glsl  sphere.glsl  sphere.vert
media/shader/light/: deferred_shading.frag
media/shader/skybox/: skyboxcolor.frag  skyboxcolor.vert
media/shader/terrain/: clipmapComputeNormals.glsl  clipmapUpsample.glsl  clipmappings.glsl  geometry_clipmappings.glsl  gpu_tessllation.glsl  terrain.frag  terrain.vert
media/shader/tessellation/: pn_triangle_light.cs  pn_triangle_light.es  pn_triangle_light.vert  pn_triangles_geo.frag  pn_triangles_geo.geo  pn_triangles_geo.vert  pn_triangles_geo_pn.frag  pn_triangles_geo_pn.geo  pn_triangles_geo_pn.vert  pn_triangles_geo_pn_quadratic_normal.geo  pn_triangles_geo_pn_quadriatic_normal.frag  pn_triangles_geo_polygon_subdivision.geo  tess.cs  tess.es  tess.frag  tess.vert  tess_curvers.geo  tess_surface.cs  tess_surface.es
media/shader/test/: clipmap.glsl  jpg_gpu.glsl
resource/: water_wave.config
test/: CMakeLists.txt  clipmap_prepprocessor.cpp  clipmap_prepprocessor.h  drawApi.cpp  jpeg_gpu.cpp  jpeg_gpu.h  jpgd.cpp  jpgd.h  multThread.cpp  render.cpp  render.h  testClipmap.cpp  testImage.cpp  test_flash_buffer.cpp
tool/: CMakeLists.txt  mipmapping.cpp
(+31 files in other folders)
