
set(EXTERN_DIR  ${CMAKE_CURRENT_SOURCE_DIR}/../extern)
ADD_SUBDIRECTORY(antialias)
ADD_SUBDIRECTORY(water)
ADD_SUBDIRECTORY(texturemap)
ADD_SUBDIRECTORY(light)
ADD_SUBDIRECTORY(ao)
ADD_SUBDIRECTORY(tessellation)
ADD_SUBDIRECTORY(mathematics)
ADD_SUBDIRECTORY(terrains)
ADD_SUBDIRECTORY(optimization)
ADD_SUBDIRECTORY(noise)
